--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                                           <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces_occupancy" target="_blank" role="button">DNA Spaces Occupancy (Github)</a>
                                           <a class="btn btn-primary" href="https://dnaspaces_occupancy.thehotdesk.com.au" target="_blank" role="button">DNA Spaces Occupancy (Example)</a>
                                           <p>Simple table to show the device count events.</p>
-
-                                      </li> 
+                                      </li>
+                                      <li class="list-group-item">
+                                          <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces_tester" target="_blank" role="button">DNA Spaces Accuracy Tester (Github)</a>
+                                          <a class="btn btn-primary" href="https://accuracy.thehotdesk.com.au" target="_blank" role="button">DNA Spaces Accuracy Tester (Example)</a>
+                                          <p>Simple table to show the device count events.</p>
+                                      </li>
                                 </ul>
                             </div>
                     </div>
