Added extra demo apps.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                                       <li class="list-group-item">
                                           <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces_tester" target="_blank" role="button">DNA Spaces Accuracy Tester (Github)</a>
                                           <a class="btn btn-primary" href="https://accuracy.thehotdesk.com.au" target="_blank" role="button">DNA Spaces Accuracy Tester (Example)</a>
-                                          <p>Simple table to show the device count events.</p>
+                                          <p>DNA Spaces accuracy and latency tester.</p>
+                                      </li>
+                                      <li class="list-group-item">
+                                          <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces-iot-services-demo" target="_blank" role="button">DNA Spaces IoT Services Demo (Github)</a>
+                                          <a class="btn btn-primary" href="https://iot.thehotdesk.com.au" target="_blank" role="button">DNA Spaces IoT Services (Demo)</a>
+                                          <p>Show IoT telemetry data in a table.</p>
+                                      </li>
+                                      <li class="list-group-item">
+                                          <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces-floor-counter" target="_blank" role="button">DNA Spaces floor counter demo (Github)</a>
+                                          <a class="btn btn-primary" href="https://floor_count.thehotdesk.com.au" target="_blank" role="button">DNA Spaces IoT Services (Demo)</a>
+                                          <p>Javascript demo that uses Detect & Locate API.</p>
                                       </li>
                                 </ul>
                             </div>
