Added extra demo apps.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                       </li>
                                       <li class="list-group-item">
                                           <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces-floor-counter" target="_blank" role="button">DNA Spaces floor counter demo (Github)</a>
-                                          <a class="btn btn-primary" href="https://floor_count.thehotdesk.com.au" target="_blank" role="button">DNA Spaces IoT Services (Demo)</a>
+                                          <a class="btn btn-primary" href="https://floor_count.thehotdesk.com.au" target="_blank" role="button">DNA Spaces floor counter (Demo)</a>
                                           <p>Javascript demo that uses Detect & Locate API.</p>
                                       </li>
                                 </ul>
