--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                       </li>
                                       <li class="list-group-item">
                                           <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces_occupancy" target="_blank" role="button">DNA Spaces Occupancy (Github)</a>
-                                          <a class="btn btn-primary" href="https://dnaspaces_occupancy.thehotdesk.com.au" target="_blank" role="button">DNA Spaces Occupancy (Example)</a>
+                                          <a class="btn btn-primary" href="https://occupancy.thehotdesk.com.au" target="_blank" role="button">DNA Spaces Occupancy (Example)</a>
                                           <p>Simple table to show the device count events.</p>
                                       </li>
                                       <li class="list-group-item">
@@ -42,7 +42,7 @@
                                       </li>
                                       <li class="list-group-item">
                                           <a class="btn btn-primary" href="https://github.com/leigh-jewell/dnaspaces-floor-counter" target="_blank" role="button">DNA Spaces floor counter demo (Github)</a>
-                                          <a class="btn btn-primary" href="https://floor_count.thehotdesk.com.au" target="_blank" role="button">DNA Spaces floor counter (Demo)</a>
+                                          <a class="btn btn-primary" href="https://floorcount.thehotdesk.com.au" target="_blank" role="button">DNA Spaces floor counter (Demo)</a>
                                           <p>Javascript demo that uses Detect & Locate API.</p>
                                       </li>
                                 </ul>
